[gd_scene load_steps=8 format=3 uid="uid://fra1wp5715to"]

[ext_resource type="Script" uid="uid://03sqx5jinasm" path="res://Scenes/Shield/Shield.gd" id="1_nlrep"]
[ext_resource type="Texture2D" uid="uid://cxbmrtydw8d4e" path="res://assets/shield/spr_shield_small.png" id="1_sngbc"]
[ext_resource type="AudioStream" uid="uid://c13f6780cid8r" path="res://assets/sounds/powerup/shield_18.wav" id="2_djkv3"]

[sub_resource type="CircleShape2D" id="CircleShape2D_sngbc"]
radius = 30.0167

[sub_resource type="Animation" id="Animation_nlrep"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_hijiv"]
resource_name = "hit"
length = 0.2
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.972549, 0, 0, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_l7k22"]
_data = {
&"RESET": SubResource("Animation_nlrep"),
&"hit": SubResource("Animation_hijiv")
}

[node name="Shield" type="Area2D"]
collision_layer = 32
collision_mask = 12
script = ExtResource("1_nlrep")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_sngbc")

[node name="Sprite2D" type="Sprite2D" parent="."]
rotation = -1.5708
scale = Vector2(0.5, 0.5)
texture = ExtResource("1_sngbc")

[node name="Sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_djkv3")
bus = &"SFX"

[node name="LifeTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_l7k22")
}

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="timeout" from="LifeTimer" to="." method="_on_life_timer_timeout"]
